[feat] authentication on ERP on spring boot start server